# systech-aidd-test

./: .coverage  .dockerignore  .env.example  .gitignore  ADMIN_MODE_FIXED.md  ADMIN_MODE_SOLUTION_SUMMARY.md  ADMIN_MODE_TIMEOUT_FIX_RU.md  ADMIN_MODE_TIMEOUT_FIX_SUMMARY.md  ALL_SYSTEMS_OPERATIONAL.md  DEPLOYMENT_CHECKLIST_S5.md  DEPLOYMENT_INSTRUCTIONS.md  DOCKER_QUICK_START.md  DOCKER_TESTING_REPORT.md  DOCUMENTATION_UPDATE_SPRINT_D0.md  Dockerfile  ERROR_MESSAGE_IMPROVEMENTS.md  FINAL_SESSION_STATUS.txt  FIXES_SUMMARY_SESSION.md  FRONTEND_FIX_BACKLOG.md  FRONTEND_FIX_INSTRUCTIONS.md  FRONTEND_FIX_SUMMARY.md  FRONTEND_MODULE_FIX.md  IMMEDIATE_FIX.md  Makefile  QUICK_CHECK.md  QUICK_FIX_FRONTEND.md  RATE_LIMIT_FIX_REPORT.md  README.md  SERVICES_STARTUP_GUIDE.md  SESSION_COMPLETE.txt  SESSION_FIXES_SUMMARY.md  SPRINT_4_COMPLETED_PHASE_2.md  SPRINT_4_FINAL_COMPLETION_REPORT.md  SPRINT_4_FINAL_REPORT.md  SPRINT_4_LAUNCH_SUMMARY.md  SPRINT_4_PROGRESS.md  SPRINT_5_PHASE4_COMPLETION_REPORT.md  SPRINT_D0_DOCUMENTATION_COMPLETE.txt  SPRINT_D0_IMPLEMENTATION_COMPLETE.md  SPRINT_D0_TESTING_SUMMARY.md  (+27 more)
.cursor/commands/: review.md
.cursor/plans/: spri-19af1aea.plan.md  sprint-d1-build-publish-f14791f5.plan.md  sprint-d2-manual-deploy-715e1944.plan.md  sprint-f1-mock-api-69f4c916.plan.md  sprint-f2-frontend-init-d33b165a.plan.md  sprint-f3-dashboard-775adbf2.plan.md  sprint-s1-database-implementation-617c142f.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow-tech-debt.mdc  workflow.mdc  workflow_tdd.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0f7d5dc69d1f_create_users_table.py  798d96052738_create_chat_tables.py  798d96052738_create_messages_table.py  optimize_chat_indexes.py
data/: messages.db
devops/: .dockerignore.api  .dockerignore.bot  .dockerignore.frontend  Dockerfile.api  Dockerfile.bot  Dockerfile.frontend  README.md  SPRINT_D0_SUMMARY.md  SPRINT_D2_READY.md
devops/doc/: DEVOPS_INIT_SUMMARY.md  SPRINT_D1_IMPLEMENTATION_SUMMARY.md  SPRINT_D2_COMPLETION.md  SPRINT_D2_PREPARATION_COMPLETE.md  SPRINT_D2_PROGRESS.md  devops-roadmap.md  github-actions-guide.md  sprint-d0-completion.md
devops/scripts/: README.md  check-server.sh  deploy.sh
docs/: ADR.md  ARCHITECTURE_S5.md  IDEA.md  TASKLIST.md  TASKLIST_TECH_DEBT.md  TESTING_GUIDE_S5.md  VISION.md  roadmap.md
docs/guides/: ARCHITECTURE.md  CODEBASE_TOUR.md  DEVELOPMENT.md  (+8 more)
frontend/: README.md
migrations/: schema.sql
prompts/: system_prompt.txt
src/: __init__.py  api_server.py  bot.py  config.py  context_storage.py  database.py  llm_client.py  logger.py  main.py  messages.py  models.py  text2sql.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_api_stats.py  test_bot.py  test_chat_e2e.py  test_chat_integration.py  test_chat_performance.py  test_chat_service_production.py  test_config.py  test_context_storage.py  test_database.py  test_llm_client.py  test_logger.py  test_messages.py  test_models.py  test_text2sql_production.py
(+83 files in other folders)
