[project]
name = "systech-aidd-test"
version = "0.1.0"
description = "AI-driven Telegram bot for testing LLM integration"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

